--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "bootstrap": "^5.3.3",
     "ccxt": "^4.3.21",
     "ga-4-react": "^0.1.281",
+    "i18next": "^23.11.5",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.1",
     "react-intl": "^6.6.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.1",
