--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "createItemsAssetsExportFile": "node ./scripts/createItemsAssetsExportFile > ./src/assets/items/items_array.js",
     "dev": "next dev",
     "build": "next build",
+    "clear":"npm run --clear",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,11 +25,13 @@
     "ga-4-react": "^0.1.281",
     "i18next": "^23.11.5",
     "next": "^14.2.3",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
     "react-intl": "^6.6.6",
+    "react-papaparse": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
@@ -56,6 +59,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "csv-loader": "^3.0.5",
+    "eslint": "^8.57.0",
+    "react-app-rewired": "^2.2.1",
+    "webpack": "^5.92.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
