--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "generate-sitemap": "npx sitemap",
     "createAssetsExportFile": "node ./scripts/createAssetsExportFile > ./src/assets/img/assets.js",
     "createItemsAssetsExportFile": "node ./scripts/createItemsAssetsExportFile > ./src/assets/items/items_array.js",
     "dev": "next dev",
     "build": "next build",
-    "clear":"npm run --clear",
+    "clear": "npm run --clear",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -22,13 +23,16 @@
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
     "ccxt": "^4.3.21",
+    "fs": "^0.0.1-security",
     "ga-4-react": "^0.1.281",
     "i18next": "^23.11.5",
     "next": "^14.2.3",
+    "next-sitemap": "^4.2.3",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^14.1.1",
     "react-intl": "^6.6.6",
     "react-papaparse": "^4.4.0",
@@ -37,6 +41,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.1",
+    "sitemap": "^8.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -59,11 +64,13 @@
     ]
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.4",
     "csv-loader": "^3.0.5",
     "eslint": "^8.57.0",
     "react-app-rewired": "^2.2.1",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "xml-loader": "^1.2.1"
   }
 }
